# mt_metadata

./: HISTORY.rst  README.md  code.json  pyproject.toml
.github/workflows/: testing_in_conda.yml
mt_metadata/: __init__.py
mt_metadata/common/: citation.py  person.py
mt_metadata/timeseries/: station.py
mt_metadata/timeseries/filters/: channel_response.py
mt_metadata/timeseries/filters/standards/: filter_base.json
mt_metadata/timeseries/tools/: license_tools.py
mt_metadata/transfer_functions/io/edi/: edi.py
mt_metadata/transfer_functions/io/edi/metadata/: data_section.py  define_measurement.py  header.py  hmeasurement.py
mt_metadata/utils/: validators.py
